--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-aiogram==3.4.1
-apscheduler==3.10.4
-yfinance==0.2.40
-Flask==3.0.3
+aiogram==3.1.1
+aiohttp
+pandas
+yfinance
+python-dotenv
+apscheduler
+flask
+pydantic==1.10.13
