--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 aiogram==3.1.1
-aiohttp==3.8.6
-pandas
-yfinance
+aiohttp
 python-dotenv
-apscheduler
 flask
-pydantic==2.3.0
+apscheduler
+yfinance
 
 
 
